--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,14 @@ if(BUILD_TESTS)
         tests/test_arrays_extended.cpp
         tests/test_interpreter_edge_cases.cpp
         tests/test_builtin_functions.cpp
+        tests/test_stress_limits.cpp
+        tests/test_edge_cases_advanced.cpp
+        tests/test_functional_advanced.cpp
+        tests/test_performance_limits.cpp
+        tests/test_basic_arithmetic.cpp
+        tests/test_variable_operations.cpp
+        tests/test_control_flow.cpp
+        tests/test_string_operations.cpp
     )
     
     # Test executable
@@ -120,7 +128,7 @@ if(BUILD_TESTS)
     include(GoogleTest)
     gtest_discover_tests(volt_tests)
     
-    message(STATUS "✅ Tests enabled (450+ tests)")
+    message(STATUS "✅ Tests enabled (650+ tests)")
 endif()
 
 # ========================================
