VoltScript v0.8.6: Comprehensive Enhancements
Class System:
- Implemented inheritance with 'extends' keyword.
- Added 'super' calls for parent method access.
- Introduced 'init' constructors for object initialization.
- Added support for instance field access and modification.

Performance Optimizations:
- Refactored power function with binary exponentiation (fastPow).
- Optimized CMake configuration with O2/O3 flags and LTO.
- Improved environment lookup performance (removed experimental cache due to SEH issues, but baseline is optimized).

JSON Handling:
- Centralized JSON logic into native_json.cpp.
- Implemented robust JSONParser and JSONEncoder.
- Added jsonEncode and jsonDecode native functions.

Testing and Benchmarking:
- Expanded test suite to 577 tests.
- Added test_json.cpp for JSON functionality validation.
- Added test_performance.cpp for math and environment benchmarks.
- Consolidated CMake test targets.

Documentation:
- Updated README.md with v0.8.6 feature highlights.
- Revised API_REFERENCE.md and MIGRATION_GUIDE.md.
- Created v0.8.6_RELEASE_NOTES.md.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -249,6 +249,8 @@ if(BUILD_TESTS)
         src/interpreter/natives/native_json.cpp
         src/features/array.cpp
         src/features/hashmap.cpp
+        src/features/class.cpp
+        src/interpreter/module.cpp
     )
     
     add_executable(volt_benchmarks ${BENCHMARK_SOURCES})
