CI: configure with BUILD_TESTS=OFF and disable AoT/JIT; CMake: conditionally install test/benchmark targets only when built

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Install NSIS (for Windows installer)
         run: choco install nsis -y
       - name: Configure
-        run: cmake -S "${{ github.workspace }}" -B build -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S "${{ github.workspace }}" -B build -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=OFF -DCLAW_ENABLE_AOT=OFF -DCLAW_ENABLE_JIT=OFF
       - name: Build
         run: cmake --build build --config Release
       - name: Package (CPack via CMake)
@@ -37,7 +37,7 @@ jobs:
       - name: Install deps
         run: sudo apt-get update && sudo apt-get install -y cmake ninja-build g++ clang llvm tar gzip
       - name: Configure
-        run: cmake -S "${{ github.workspace }}" -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S "${{ github.workspace }}" -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=OFF -DCLAW_ENABLE_AOT=OFF -DCLAW_ENABLE_JIT=OFF
       - name: Build
         run: cmake --build build --config Release
       - name: Package (CPack via CMake)
@@ -61,7 +61,7 @@ jobs:
           brew update
           brew install cmake ninja || true
       - name: Configure
-        run: cmake -S "${{ github.workspace }}" -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release
+        run: cmake -S "${{ github.workspace }}" -B build -G "Ninja" -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTS=OFF -DCLAW_ENABLE_AOT=OFF -DCLAW_ENABLE_JIT=OFF
       - name: Build
         run: cmake --build build --config Release
       - name: Package (CPack via CMake)
