--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           echo "OPENSSL_ROOT_DIR=$(brew --prefix openssl@3)" >> $GITHUB_ENV
 
       - name: Configure
-        run: cmake -S "${{ github.workspace }}" -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DBUILD_TESTS=ON ${{ startsWith(matrix.os, 'ubuntu') && '-DENABLE_COVERAGE=ON' || '' }} ${{ (startsWith(matrix.os, 'ubuntu') || startsWith(matrix.os, 'macos')) && '-DENABLE_CLANG_TIDY=ON' || '' }} ${{ startsWith(matrix.os, 'macos') && format('-DOPENSSL_ROOT_DIR={0}', env.OPENSSL_ROOT_DIR) || '' }}
+        run: cmake -S "${{ github.workspace }}" -B build -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} -DBUILD_TESTS=ON -DCLAW_ENABLE_AOT=OFF -DCLAW_ENABLE_JIT=OFF ${{ startsWith(matrix.os, 'ubuntu') && '-DENABLE_COVERAGE=ON' || '' }} ${{ (startsWith(matrix.os, 'ubuntu') || startsWith(matrix.os, 'macos')) && '-DENABLE_CLANG_TIDY=ON' || '' }} ${{ startsWith(matrix.os, 'macos') && format('-DOPENSSL_ROOT_DIR={0}', env.OPENSSL_ROOT_DIR) || '' }}
 
       - name: Build
         run: cmake --build build --config ${{ matrix.build_type }}
